--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -20,14 +20,697 @@
 {% extends "_layout" %}
 
 {% block content %}
-	<h1>{{ entry.title }}</h1>
+	<!-- <h1>{{ entry.title }}</h1> -->
 
-	{{ entry.body }}
+	<!-- {{ entry.body }} -->
 
-	<h2>Recent News</h2>
-	<ul>
-		{% for entry in craft.entries.section('news').limit(5).find() %}
-			<li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
-		{% endfor %}
-	</ul>
+
+
+{% for block in entry.homePageModules %}
+
+    {% if block.type == "hero" %}
+
+<header id="header">
+    <div class="container">
+    <ul class="social-links">
+
+    </ul>
+
+    <h1><a href="http://localhost:8888/">
+        <img class="logo" src="img/logo.svg" alt="">
+    </a></h1>
+
+</div>
+<nav>
+<div class="menu-expand">
+    menu    ↓
+</div>
+    <ul>
+<li><a href="homepage">
+      Homepage
+      </a></li>
+    <li><a href="news">
+      News
+      </a></li>
+            </ul>
+
+
+            </nav>
+        </header>
+
+<!-- contact items -->
+<section class="contact-items">
+    <div class="contact-items-container">
+<div class="contact-item">
+<div class="contact-item-text">
+
+  hello
+</div>
+</div>
+<div class="contact-item">
+<div class="contact-item-text">
+  hello
+</div>
+</div>
+</div>
+</section>
+<!-- end contact items -->
+
+<!-- schedule items -->
+<section class="schedule-items">
+<div class="schedule">
+<div class="hours">
+tuesday/wednesday 4-9   thursday 4-11   friday 4-11   saturday 5-11   sunday 5-9
+<br>
+Happy Hour 4-6 (on patio weather permitting)
+</div>
+<div class="address">
+eee
+</div>
+</div>
+</section>
+<!-- schedule items -->
+
+{% elseif block.type == "instagramFeed" %}
+
+<!-- instagram feed slideshow -->
+<section class="slideshow">
+    <div style="display: none;">
+        <div id="instafeed" style="display: none;"></div>
+    </div>
+<div id="owl1" class="owl-carousel owl-theme">
+</div>
+</section>
+<!-- instagram feed slideshow -->
+
+
+
+    {% elseif block.type == "menu" %}
+
+
+<!-- menu tabs -->
+
+
+<section class="menu">
+
+<ul class="menu-tabs">
+    <li>first</li>
+<!-- repeater here: -->
+<li class="active">hello</li>
+<li>hello</li>
+<li>hello</li>
+<li>hello</li>
+<!-- repeater here: -->
+    <li>last</li>
+</ul>
+
+<div class="panels one">
+<div class="panels two">
+<div class="panels three">
+
+<div class="panels inside" style="display: block;">
+<div class="clearfix">
+<div class="meal-group">
+
+
+<!-- list -->
+
+
+<!-- list -->
+
+
+
+<ul>
+<li>header</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+<div class="meal-group">
+<ul>
+<li>header</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+</div>
+<div class="menu-footer">menu</div>
+</div>
+
+
+<div class="panels inside" style="display: none;">
+<div class="clearfix">
+<div class="meal-group">
+<ul>
+<li>2</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+<div class="meal-group">
+<ul>
+<li>header</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+</div>
+<div class="menu-footer">menu</div>
+</div>
+
+<div class="panels inside" style="display: none;">
+<div class="clearfix">
+<div class="meal-group">
+<ul>
+<li>3</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+<div class="meal-group">
+<ul>
+<li>header</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+</div>
+<div class="menu-footer">menu</div>
+</div>
+<div class="panels inside" style="display: none;">
+<div class="clearfix">
+<div class="meal-group">
+<ul>
+<li>4</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+<div class="meal-group">
+<ul>
+<li>header</li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">13</span></li>
+<li>food  <span class="price">14</span></li>
+</ul>
+</div>
+</div>
+<div class="menu-footer">menu</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- menu tabs -->
+
+
+
+   {% elseif block.type == "findUs" %}
+
+
+
+<!-- find us -->
+
+<section class="find-us">
+
+    <div class="find-panel">
+
+<div class="find-header">
+    find us!
+</div>
+
+<div class="youtube">
+    {{ block.youtubeUrl|raw }}
+</div>
+<div class="map">
+    {{ block.googleMapsUrl|raw }}
+</div>
+
+</div>
+
+
+</section>
+
+
+
+
+<!-- find us -->
+
+
+    {% elseif block.type == "about" %}
+
+
+<!-- slideshow big about  -->
+
+
+<section class="slideshow-big-about">
+
+<div class="embellishment">
+    emb
+</div>
+
+<div id="owl2" class="owl-carousel owl-theme">
+
+
+<div class="item">
+<img src="img/about.jpg" alt="">
+<div class="about">
+    <p>
+        first
+       First paragraph Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit ipsum dolor sit amet.
+    </p>
+</div>
+</div>
+
+<div class="item">
+<img src="img/about.jpg" alt="">
+<div class="about">
+    <p>
+        second
+       First paragraph Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit ipsum dolor sit amet.
+    </p>
+</div>
+</div>
+
+
+<div class="item">
+<img src="img/about.jpg" alt="">
+<div class="about">
+    <p>
+        third
+       First paragraph Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit ipsum dolor sit amet.
+    </p>
+</div>
+</div>
+
+
+
+
+</div>
+
+
+<div class="slideshow-box-text">
+
+<div class="about-triangle">
+    about
+</div>
+
+
+
+
+</section>
+
+
+<!-- slideshow big about -->
+
+
+    {% elseif block.type == "eventsBooking" %}
+
+
+
+
+<!-- events booking -->
+
+<section class="events-booking">
+
+    <div class="events-dodecagon">
+            events booking
+    </div>
+<div class="events-description">
+
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+
+</div>
+
+<div class="events-row">
+
+<div class="clearfix">
+<div class="events-form">
+{% macro errorList(errors) %}
+    {% if errors %}
+        <ul class="errors">
+            {% for error in errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endmacro %}
+
+{% from _self import errorList %}
+
+<!-- <form method="post" action="" accept-charset="UTF-8" style="position:relative;"> -->
+
+
+<form id="ajax-contact" method="post" action="mailer.php" style="position:relative;">
+
+    {{ getCsrfInput() }}
+    <input type="hidden" name="action" value="contactForm/sendMessage">
+    <!-- <input type="hidden" name="redirect" value="contact/thanks"> -->
+
+    <!-- <h3><label for="fromName">Your Name</label></h3> -->
+    <input placeholder="name" id="fromName" type="text" name="fromName" value="{% if message is defined %}{{ message.fromName }}{% endif %}">
+    {{ message is defined and message ? errorList(message.getErrors('fromName')) }}
+
+    <!-- <h3><label for="fromEmail">Your Email</label></h3> -->
+    <input placeholder="email" id="fromEmail" type="email" name="fromEmail" value="{% if message is defined %}{{ message.fromEmail }}{% endif %}">
+    {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
+
+    <!-- <h3><label for="subject">Subject</label></h3> -->
+    <input placeholder="subject" id="subject" type="text" name="subject" value="{% if message is defined %}{{ message.subject }}{% endif %}">
+    {{ message is defined and message ? errorList(message.getErrors('subject')) }}
+
+    <!-- <h3><label for="message">Message</label></h3> -->
+     <textarea placeholder="message" rows="10" cols="40" id="message" name="message">{% if message is defined %}{{ message.message }}{% endif %}</textarea>
+    {{ message is defined and message ? errorList(message.getErrors('message')) }}
+    <input type="submit" value="Send">
+</form>
+</div>
+<div class="events-slideshow">
+<div id="owl3" class="owl-carousel owl-theme">
+<div class="item">
+    <img src="img/event-slide-1.png" alt="">
+</div>
+<div class="item">
+    <img src="img/event-slide-2.png" alt="">
+</div>
+<div class="item">
+    <img src="img/event-slide-3.png" alt="">
+</div>
+</div></div></div></div>
+
+</section>
+
+<!-- events booking -->
+
+
+
+
+    {% elseif block.type == "ourFamily" %}
+
+<!-- our family -->
+
+<section class="our-family">
+<div class="our-family-header">
+    our family
+</div>
+<div class="item-row">
+<div class="item-container">
+
+<div class="clearfix">
+
+<div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+        <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+        <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+        <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+<div class="expand-button members">
+    expand
+</div>
+</div>
+
+
+
+</div></div>
+</section>
+
+
+<!-- our family -->
+
+    {% elseif block.type == "media" %}
+
+<!-- media-->
+
+<section class="media">
+<div class="media-header">
+    media
+</div>
+
+<div class="item-row">
+<div class="item-container">
+
+<div class="clearfix">
+<div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+    <div class="item-single">
+    <div class="item-name">
+        Wassef
+    </div>
+    <div class="item-description">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quisaliquam erat volutpatLorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    </div></div>
+
+<div class="expand-button articles">
+    expand
+</div>
+
+
+</div>
+
+
+</div></div>
+
+
+</section>
+
+<!-- our family -->
+
+
+    {% endif %}
+
+{% endfor %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
