--- a/craft/templates/about/index.html
+++ b/craft/templates/about/index.html
@@ -11,10 +11,10 @@
  #}
 
 {% extends "_layout" %}
-{% set title = "News" %}
+{% set title = "About" %}
 
 {% block content %}
-	<h1>News</h1>
+	<h1>About</h1>
 	{% for entry in craft.entries.section('news').find() %}
 		<article>
 			<h3><a href="{{ entry.url }}">{{ entry.title }}</a></h3>
